[gd_scene load_steps=9 format=3 uid="uid://bxjlo4pu1oafu"]

[ext_resource type="Script" path="res://addons/TreeSpeak/scripts/editor/TreeSpeak.gd" id="1_jiqaj"]
[ext_resource type="Script" path="res://addons/TreeSpeak/scripts/ui/SetText.gd" id="2_eqxgb"]
[ext_resource type="Script" path="res://addons/TreeSpeak/scripts/editor/TreeSpeakGraph.gd" id="2_jarrc"]
[ext_resource type="Script" path="res://addons/TreeSpeak/scripts/editor/NodeCreator.gd" id="3_d2umm"]
[ext_resource type="Script" path="res://addons/TreeSpeak/scripts/editor/TreeSpeakGraphContextMenu.gd" id="3_keeji"]
[ext_resource type="Script" path="res://addons/TreeSpeak/scripts/editor/DialogueStartNode.gd" id="6_fhmo6"]
[ext_resource type="Script" path="res://addons/TreeSpeak/scripts/editor/TreeSpeakFileDialog.gd" id="8_p83s7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cvwrj"]
bg_color = Color(0.313726, 0.466667, 0.219608, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0

[node name="TreeSpeak" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_jiqaj")

[node name="MenuButtons" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="ButtonNew" type="Button" parent="MenuButtons"]
layout_mode = 2
text = "New"
flat = true

[node name="ButtonDebugPrint" type="Button" parent="MenuButtons"]
layout_mode = 2
text = "DebugPrint
"
flat = true

[node name="TreeSpeakGraph" type="GraphEdit" parent="." node_paths=PackedStringArray("popup")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
right_disconnects = true
minimap_enabled = false
script = ExtResource("2_jarrc")
popup = NodePath("TreeSpeakGraphContextMenu")

[node name="NodeCreator" type="Node" parent="TreeSpeakGraph"]
script = ExtResource("3_d2umm")

[node name="TreeSpeakGraphContextMenu" type="PopupMenu" parent="TreeSpeakGraph"]
size = Vector2i(157, 89)
unfocusable = true
item_count = 3
item_0/text = "Add Player Node"
item_0/id = 0
item_1/text = "Add NPC Node"
item_1/id = 1
item_2/text = "Add Event Node"
item_2/id = 2
script = ExtResource("3_keeji")

[node name="DialogueTitle" type="Label" parent="TreeSpeakGraph"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -108.0
offset_top = 12.0
offset_right = 109.0
offset_bottom = 35.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "Drag and drop dialogue resource"
script = ExtResource("2_eqxgb")

[node name="START" type="GraphNode" parent="TreeSpeakGraph"]
visible = false
layout_mode = 0
offset_left = 401.0
offset_top = 202.0
offset_right = 602.0
offset_bottom = 330.0
mouse_filter = 1
theme_override_styles/titlebar = SubResource("StyleBoxFlat_cvwrj")
position_offset = Vector2(401, 202)
draggable = false
selectable = false
title = "Dialogue"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
script = ExtResource("6_fhmo6")

[node name="Slot" type="Label" parent="TreeSpeakGraph/START"]
layout_mode = 2
text = "START"
horizontal_alignment = 2

[node name="NameLabel" type="Label" parent="TreeSpeakGraph/START"]
layout_mode = 2
text = "NPC Name"

[node name="NpcName" type="LineEdit" parent="TreeSpeakGraph/START"]
layout_mode = 2
placeholder_text = "Enter NPC name..."

[node name="TreeSpeakFileDialog" type="FileDialog" parent="."]
initial_position = 2
size = Vector2i(450, 450)
filters = PackedStringArray("*.tres ; Text Resource", "*.res ; Binary Resource")
use_native_dialog = true
script = ExtResource("8_p83s7")

[node name="TreeSpeakDeleteNodesDialog" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
initial_position = 2
dialog_text = "Delete selected nodes?

(Remember, there is no CTRL-Z support)"

[connection signal="pressed" from="MenuButtons/ButtonNew" to="TreeSpeakFileDialog" method="prompt_save"]
[connection signal="pressed" from="MenuButtons/ButtonDebugPrint" to="." method="debug_print"]
[connection signal="text_changed" from="TreeSpeakGraph/START/NpcName" to="TreeSpeakGraph" method="_on_npc_name_updated"]
[connection signal="confirmed" from="TreeSpeakDeleteNodesDialog" to="TreeSpeakGraph" method="_delete_nodes_confirmed"]
